subscribe firefox red border fix. features overlaping text pictures fixes

--- a/client/App.less
+++ b/client/App.less
@@ -208,6 +208,10 @@ a {
   z-index: 40;
 }
 
+input:required {
+    box-shadow: none;
+}
+
 .social--button {
   display: inline;
   @media screen and (max-width: 700px) {
